# techtrix_gazebo_assignment

./: .gitignore  README.md  simulation.world  startup.sh  techtrix.def
gazeboModels/techtrix_walls/: model.sdf
gazebo_light_sensor_plugin/include/: light_sensor_plugin.h  thermal_sensor_plugin.h
gazebo_light_sensor_plugin/src/: thermal_camera.cpp  thermal_camera_plugin.cpp
gazebo_thermal_sensor_plugin/: CMakeLists.txt  package.xml
gazebo_thermal_sensor_plugin/include/: thermal_sensor_plugin.h
gazebo_thermal_sensor_plugin/src/: light_sensor_plugin.cpp  thermal_camera.cpp  thermal_camera_plugin.cpp  thermal_depth_camera_plugin.cpp
techtrix_control/: CMakeLists.txt  package.xml
techtrix_control/config/: techtrix_control.yaml
techtrix_control/launch/: techtrix_control.launch  techtrix_thermal.launch
techtrix_control/scripts/: cylinders.py  robot_movement.py  thermal.py
techtrix_description/: CMakeLists.txt  package.xml
techtrix_description/rviz/: techtrix.rviz
techtrix_description/urdf/: gazebo_plugins.xacro  macros.xacro  materials.xacro  techtrix.xacro  techtrix_properties.xacro
techtrix_gazebo/: CMakeLists.txt  package.xml
techtrix_gazebo/launch/: techtrix.launch  techtrix_rviz.launch
techtrix_gazebo/models/blender_environment/trucks/: delivery+truck_obj.mtl
techtrix_gazebo/models/techtrix_conveyor_belt/: model.config  model.sdf
techtrix_gazebo/models/techtrix_cylinder/: model.config  model.sdf
techtrix_gazebo/models/techtrix_cylinder/meshes/: model.dae
techtrix_gazebo/models/techtrix_factory/: model.config  model.sdf
techtrix_gazebo/models/techtrix_robot/: model.config  model.sdf
techtrix_gazebo/models/techtrix_truck/: model.config  model.sdf
techtrix_gazebo/models/techtrix_walls/: model.config
techtrix_gazebo/models/techtrix_worker/: model.config  model.sdf
techtrix_gazebo/models/techtrix_worker/meshes/: model.dae
techtrix_gazebo/worlds/: techtrix.world
techtrix_grabber_contact_plugin/: CMakeLists.txt  package.xml
techtrix_grabber_contact_plugin/include/: ContactPlugin.hh
techtrix_grabber_contact_plugin/src/: ContactPlugin.cc
techtrix_grabber_model_plugin/: CMakeLists.txt  package.xml
techtrix_grabber_model_plugin/src/: grabber_model_plugin.cc
techtrix_grabber_world_plugin/: CMakeLists.txt  package.xml
techtrix_grabber_world_plugin/src/: grabber_world_plugin.cc
techtrix_grabber_world_plugin/srv/: Toggle.srv
techtrix_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
techtrix_moveit_config/config/: fake_controllers.yaml  gazebo_techtrix_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  techtrix_robot.srdf
techtrix_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
techtrix_urdf_factory/: CMakeLists.txt  package.xml
techtrix_urdf_factory/launch/: load_hrwros.launch  visualize_hrwros.launch
techtrix_urdf_factory/urdf/: hrwros.xacro
techtrix_urdf_factory/urdf/robot_model/: ur10.urdf.xacro
techtrix_urdf_factory/urdf/robot_pedestal/: robot1_pedestal.xacro  robot2_pedestal.xacro
techtrix_urdf_factory/urdf/vacuum_gripper/: vacuum_gripper.urdf.xacro  vacuum_gripper.xacro
techtrix_urdf_factory/urdf/workcell/: workcell.urdf.xacro  workcell.xacro
