<?xml version="1.0"?>
<package format="2">
  <name>techtrix_grabber_world_plugin</name>
  <version>0.0.0</version>
  <description>The techtrix_grabber_world_plugin package</description>

  <maintainer email="techtrix@todo.todo">techtrix</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>